--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "husky": "^0.14.3",
     "jest": "20.0.4",
     "lint-staged": "^7.0.5",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -37,6 +39,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.3.2",
+    "react-datepicker": "^1.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
